\name{NEWS}
\newcommand{\cpkg}{\href{https://cran.r-project.org/package=#1}{\pkg{#1}}}

\title{News for Package \cpkg{FMradio}}

\section{Changes in version 1.1.2}{
  \subsection{Bug fixes:}{
    \itemize{
      \item Fixed bug in \code{mlFA}:
        \itemize{
          \item The function will now adequately handle the single latent factor case.
          \item The function returns are now differentiated for the single and multiple factor cases.
      }
    }
  }
}