@@ -35,9 +35,9 @@ Be sure that you have the [package development prerequisites](http://www.rstudio
 
 Relevant publications to **FMradio** include:
 
- 1. Peeters, C.F.W. (2019). 
+ 1. Peeters, C.F.W. (2025). 
     *"FMradio: Factor modeling for radiomic data"*. 
-    R package, version 1.1.1
+    R package, version 1.1.2
  2. Peeters, C.F.W., *et al*. (2019)
     *"Stable prediction with radiomics data"*.
     [arXiv:1903.11696 [stat.ML]](https://arxiv.org/abs/1903.11696)
