@@ -92,7 +92,7 @@ Peeters, C.F.W. \emph{et al.} (2019). Stable prediction with radiomics data.
 \href{https://arxiv.org/abs/1903.11696}{arXiv:1903.11696 [stat.ML]}.
 }
 \author{
-Carel F.W. Peeters <cf.peeters@vumc.nl>
+Carel F.W. Peeters <carel.peeters@wur.nl>
 }
 \note{
 When \code{seed = NULL} the starting seed is determined by drawing a single integer from the integers \code{1:9e5}. This non-user-supplied seed is also found in the \code{$used.seed} slot of the output.
