@@ -79,7 +79,7 @@ Peeters, C.F.W. \emph{et al.} (2019). Stable prediction with radiomics data.
 \href{https://arxiv.org/abs/1903.11696}{arXiv:1903.11696 [stat.ML]}.
 }
 \author{
-Carel F.W. Peeters <cf.peeters@vumc.nl>, Caroline Ubelhor
+Carel F.W. Peeters <carel.peeters@wur.nl>, Caroline Ubelhor
 }
 \note{
 \itemize{
