@@ -31,7 +31,7 @@ Peeters, C.F.W. \emph{et al.} (2019). Stable prediction with radiomics data.
 \href{https://arxiv.org/abs/1903.11696}{arXiv:1903.11696 [stat.ML]}.
 }
 \author{
-Carel F.W. Peeters <cf.peeters@vumc.nl>
+Carel F.W. Peeters <carel.peeters@wur.nl>
 }
 \note{
 If argument \code{X} is a \code{matrix}, the observations are expected to be in the rows and the features are expected to be in the columns.
